Fix - Reduce navbar icons jumping when old navbar position.

--- a/less/essential/navigation.less
+++ b/less/essential/navigation.less
@@ -429,6 +429,9 @@ div.dropdown-menu > ul {
             width: 64px;
         }
     }
+    .loggedin #essentialnavbar.oldnavbar.affix .navbar .navbar-inner .custommenus .usermenu ul.nav .dropdown > .dropdown-toggle {
+        min-width: 100px;
+    }
 }
 
 /* @end */
